<resources>
    <string name="app_name">Hotch</string>
    <string name="suitable_age_groups">Suitable Age Groups</string>
    <string name="language_conducted">Language Conducted</string>
    <string name="interests">Interests</string>
    <string name="activity_type">Activity Type</string>
    <string name="amount_per_participant">Amount Per Participant</string>
    <string name="currency">Currency</string>
    <string name="activity_information">Activity Information</string>
    <string name="please_fill_in_the_details_below_for_the_activity">Please fill in the details below for the activity.</string>
    <string name="other_information">Other Information</string>
    <string name="location_information">Location Information</string>
    <string name="please_fill_in_the_details_below_for_the_activity_location">Please fill in the details below for the activity location.</string>
    <string name="activity_images">Activity Images</string>
    <string name="please_upload_images_for_the_activity_gallery">Please upload images for the activity gallery.</string>
    <string name="upload_activity_image">UPLOAD ACTIVITY IMAGE</string>
    <string name="first_name">First Name</string>
    <string name="activity_description">Activity Description</string>
    <string name="activity_start_date">Activity Start Date</string>
    <string name="activity_end_date">Activity End Date</string>
    <string name="activity_start_time">Activity Start Time</string>
    <string name="activity_end_time">Activity End Time</string>
    <string name="event">Event</string>
    <string name="yes">Yes</string>
    <string name="country">Country</string>
    <string name="street_address">Street Address</string>
    <string name="address">Address</string>
    <string name="apartment_suit_unit_etc_optional">Apartment, suit, unit etc.(optional)</string>
    <string name="suburb">Suburb</string>
    <string name="state">State</string>
    <string name="pick_my_current_location">Pick my current location</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="click_here_to_select_images">CLICK HERE TO SELECT IMAGES</string>
    <string name="activity">Activity</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="about_us">ABOUT US</string>
    <string name="contact_us">CONTACT US</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOG IN</string>
    <string name="register_to_participate">Register to Participate</string>
    <string name="register_to_offer_services">Register to Offer Services</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="contact_us_1">Contact Us</string>
    <string name="about_us_1">About Us</string>
    <string name="profile_1">PROFILE</string>
    <string name="your_information">Your Information</string>
    <string name="please_fill_in_the_details_below_to_offer_services">Please fill in the details below to offer services.</string>
    <string name="contact_information">Contact Information</string>
    <string name="please_fill_in_the_details_below_to_contact_you_anytime">Please fill in the details below to contact you anytime.</string>
    <string name="payment_information">Payment Information</string>
    <string name="payment_information_is_to_make_you_any_refunds_on_payments">Payment information is to make you any refunds on payments.</string>
    <string name="business_information">Business Information</string>
    <string name="please_fill_in_the_business_information">Please fill in the business information.</string>
    <string name="upload_your_profile_pic_here">UPLOAD YOUR PROFILE PIC HERE</string>
    <string name="last_name">Last Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="languages">Languages</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_no">Phone No</string>
    <string name="mobile_no">Mobile No</string>
    <string name="paypal_email">PayPal Email</string>
    <string name="payment_details">Payment Details</string>
    <string name="business_name">Business Name</string>
    <string name="register">REGISTER</string>
    <string name="register_1">Register</string>
    <string name="add_activity">Add Activity</string>
    <string name="my_activities">My Activities</string>
    <string name="my_profile">My Profile</string>
    <string name="business_profile">Business Profile</string>
    <string name="my_bookings">My Bookings</string>
    <string name="settings">Settings</string>
    <string name="settings_1">SETTINGS</string>
    <string name="location">Location</string>
    <string name="activities">Activities</string>
    <string name="interest">Interest</string>
    <string name="events">Events</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="explore_1">EXPLORE</string>
    <string name="filter_activities">Filter Activities</string>
    <string name="date_time">Date Time</string>
    <string name="age_group">Age Group</string>
    <string name="language">Language</string>
    <string name="amount">Amount</string>
    <string name="activity_name">Activity Name</string>
    <string name="use_map">Use Map</string>
    <string name="my_activities_1">MY ACTIVITIES</string>
    <string name="my_bookings_1">MY BOOKINGS</string>
    <string name="participate">Participate</string>
    <string name="activity_1">ACTIVITY</string>
    <string name="continue_1">Continue</string>
    <string name="payment_method">Payment Method</string>
    <string name="paypal">PayPal</string>
    <string name="type_message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="type_message_to_organizer">Send a message to the organizer</string>
    <string name="payment_details_1">PAYMENT DETAILS</string>
    <string name="pay">Pay</string>
    <string name="explore_activities">Explore Activities</string>
    <string name="our_events">Our Events</string>
    <string name="trending">Trending</string>
    <string name="recommendations">Recommendations</string>
    <string name="sell_or_share">Sell or Share Your Activity</string>
    <string name="upcoming">Upcoming</string>
    <string name="friends">Friends</string>
    <string name="sign_up">SIGN UP</string>
    <string name="personal_message">Personal Message</string>
    <string name="username">Username</string>
    <string name="allow_disallow">Allow/Disallow location settings</string>
    <string name="next">Next</string>
    <string name="allow">Allow</string>
    <string name="disallow">Disallow</string>
    <string name="sell_or_share_activity">SELL OR SHARE AN ACTIVITY</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="keywords">Keywords for your activity</string>
    <string name="name_of_your_activity">Name of your activity</string>
    <string name="duration">Duration</string>
    <string name="hours">Hours</string>
    <string name="time_selection">Time selection</string>
    <string name="pick_up_option">Pick up option (does seller offer pick up?)</string>
    <string name="event_type">Event type</string>
    <string name="individual">Individual</string>
    <string name="post_now">Post Now</string>
    <string name="short_description">Short description</string>
    <string name="pictures">Pictures</string>
    <string name="videos">Videos</string>
    <string name="posting_options">Posting options</string>
    <string name="free_post">Free post</string>
    <string name="link_your_sales">Link your sales to your bank account now</string>
    <string name="terms_and_con"><![CDATA[By clicking Post Now and submitting your activity for sales, you agree to Hotch’s T&Cs]]></string>
    <string name="read_more">Read More</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="links">Links</string>
    <string name="hotch_support">Hotch Support</string>
    <string name="about_hotch">About Hotch</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="tell_us_about_yourself">TELL US ABOUT YOURSELF</string>
    <string name="dis">(Disclaimer: We do not share your information with any third party……)</string>
    <string name="what_do_you_like">WHAT DO YOU LIKE TO DO WHEN YOU TRAVEL?</string>
    <string name="categories">Categories</string>
    <string name="what_are_your_interests">WHAT ARE YOUR INTERESTS?</string>
    <string name="sporting">Sporting</string>
    <string name="gym_activities">Gym Activities</string>
    <string name="arts_and_culture">Arts and Culture</string>
    <string name="relaxation">Relaxation</string>
    <string name="children">Children</string>
    <string name="concerns_when_travel">WHAT ARE YOUR CONCERNS WHEN YOU TRAVEL?</string>
    <string name="possible_issues">Possible Issues</string>
    <string name="what_languages_do_you_speak">WHAT LANGUAGES DO YOU SPEAK / UNDERSTAND?</string>
    <string name="back">Back</string>
    <string name="activity_pictures">Activity pictures</string>
    <string name="activity_videos">Activity videos</string>
    <string name="link_your_account">LINK YOUR HOTCH ACCOUT</string>
    <string name="selling_or_sharing">SELLING OR SHARING ANY ACTIVITIES?</string>
    <string name="this_is_the_page_for_sellers_disclaimers"><![CDATA[THIS IS THE PAGE FOR SELLERS DISCLAIMERS (informing people T&Cs when selling)]]></string>
    <string name="if_you_are_planing">If you are planning to sell or share any activities, ……</string>
    <string name="finsh_sign_up">Finish Sign Up</string>
    <string name="photo_gal">PHOTO GALLERY</string>
    <string name="uploda_and_share">UPLOAD AND SHARE YOUR PHOTOS</string>
    <string name="search_for_friends">Search for friends.. (type name)</string>
    <string name="friends_and_newsfeed">FRIENDS AND NEWSFEED</string>
    <string name="upcoming_activities">UPCOMING ACTIVITIES</string>
    <string name="you_have_activities_coming_up">YOU HAVE ACTIVITIES COMING UP:</string>
    <string name="upcoming_1">UPCOMING</string>
    <string name="datetime">DATE/TIME</string>
    <string name="details">DETAILS</string>
    <string name="edit_1">EDIT</string>
    <string name="start_your_search">Search for more activities(keywords or hashtags)</string>
    <string name="activities_you_are_watching">ACTIVITIES YOU’RE WATCHING (For People to KIV Interesting Activities)</string>
    <string name="book_now">BOOK NOW</string>
    <string name="by_country">BY COUNTRY</string>
    <string name="by_category">BY CATEGORY</string>
    <string name="premium_activities">PREMIUM ACTIVITIES</string>
    <string name="check_out_up_coming_events">CHECK OUT UPCOMING EVENTS</string>
    <string name="new1">NEW</string>
    <string name="recommended_for_you">RECOMMENDED FOR YOU</string>
    <string name="your_previous_selections">YOUR PREVIOUS SELECTIONS</string>
    <string name="cant_find_your_activity">CAN’T FIND YOUR ACTIVITY?</string>
    <string name="album_view">ALBUM VIEW</string>
    <string name="request_changes">Request Changes</string>
    <string name="book">BOOK</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="seller_offer_pickup">Seller offer pick up</string>
    <string name="book1">Book</string>
    <string name="book_now1">Book Now</string>
    <string name="no_of_participants">No of participants</string>
    <string name="need_pickup">Need pick up?</string>
</resources>