<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_weight="1.5"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_name"
            android:id="@+id/activity_name"
            android:textSize="10sp"
            android:textColor="#fff"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location"
            android:id="@+id/activity_location"
            android:textSize="10sp"
            android:textColor="#d7d7d7"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_weight="1.5"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_description"
            android:id="@+id/details"
            android:textSize="8sp"
            android:textColor="#fff"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:maxHeight="80dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/book1"
            android:id="@+id/book_button"
            android:background="@drawable/red_button"
            android:textColor="@drawable/white_text_color"
            android:textSize="8sp"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profile_id"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />
    </LinearLayout>
</LinearLayout>
